# django-airfields

./: .gitignore  README.md  pyproject.toml  setup.py
airfields/: apps.py
airfields/admin/: __init__.py  airfield_admin.py
airfields/models/: __init__.py  airfield.py  airway.py  fir.py  frequency.py  runway.py  waypoint.py
airfields/templatetags/: airfield_tags.py
